--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;url=http://lucasborali.github.io/lista-de-presentes" />
+    <meta http-equiv="refresh" content="0;url=http://lucasborali.github.io/lista-de-casamento" />
   </head>
   <body>
   </body>
